--- a/seo.html
+++ b/seo.html
@@ -33,8 +33,8 @@
     </nav>
 
     <main>
-        <a href="joe@gmail.com?subject">joe@gmail.com</a>
-        <a href="joe@gmail.com?subject=">joe@gmail.com</a>
+        <a href="mailto:joe@gmail.com?subject">joe@gmail.com</a>
+        <a href="mailto:joe@gmail.com?subject=">joe@gmail.com</a>
         <section id="about">
             <h2>About this page</h2>
             <p>This is a page that I wrote very quickly to make sure that the SEO scanner is working as expected</p>
