--- a/seo.html
+++ b/seo.html
@@ -36,6 +36,7 @@
         <p>
             <a href="mailto:joe@gmail.com?subject">joe@gmail.com</a>
             <a href="mailto:joe@gmail.com?subject=">joe@gmail.com</a>
+            <a href="mailto:joe@gmail.com?subject&cc=joe1@gmail.com">joe@gmail.com</a>
         </p>
         <section id="about">
             <h2>About this page</h2>
