--- a/seo.html
+++ b/seo.html
@@ -46,11 +46,13 @@
         <section id="services">
             <h2>Bullet points</h2>
             <ul>
-                <li>I like</li>
-                <li>Bullet points</li>
-                <li>Because they're</li>
-                <li>Easy to read</li>
+                <li>I like.</li>
+                <li>Bullet points.</li>
+                <li>Because they're.</li>
+                <li>Easy to read.</li>
             </ul>
+            <i>Italics</i>
+            <u>Underline</u>
             <p>And here's a <a href="https://www.aaatraq.com" target="_blank">link within a p</a></p>
         </section>
 
