--- a/seo.html
+++ b/seo.html
@@ -52,6 +52,10 @@
                 <li>Easy to read.</li>
             </ul>
             <i>Italics</i>
+            <i>Italics</i>
+            <i>Italics</i>
+            <i>Italics</i>
+            <i>Italics</i>
             <u>Underline</u>
             <p>And here's a <a href="https://www.aaatraq.com" target="_blank">link within a p</a></p>
         </section>
