--- a/seo.html
+++ b/seo.html
@@ -57,11 +57,30 @@
             <i>Italics</i>
             <i>Italics</i>
             <u>Underline</u>
+            <p>4p 4pence 50p</p>
             <p>And here's a <a href="https://www.aaatraq.com" target="_blank">link within a p</a></p>
         </section>
+        <h1>!$*&£$*(&$*£ DFF DFDF DF  F DFD F DFD F DF DD FD FD</h1>
 
         <section id="contact">
             <h2>Lorem ipsum</h2>
+            <p>4p 4pence 50p</p>
+            <p>5mil 1mil 1milli</p>
+            <p>Form 324TB</p>p>
+            <p>10 million</p>
+            <p>B.O.B. &&&&&</p>
+            <abbr>W3C</abbr>
+            <p>B.B.C.</p>
+            <p>mob: 0983 Today Today today</p>
+            <p>mob:939435</p>
+            <title>at or and and at or</title>
+            <a href="hello.com">hello</a>
+            <a href="hello.com">click here</a>
+            <a href="hello.com">click</a>
+            <a href="hello.com">hello</a>
+            <a href="hello.com">hello</a>
+            <a href="hello.com">hello</a>
+            <a href="mailto:someone@example.com">Someone</a>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             <form action="#" method="post">
                 <label for="box1">Box 1:</label>
