--- a/seo.html
+++ b/seo.html
@@ -73,6 +73,8 @@
             <p>B.B.C.</p>
             <p>mob: 0983 Today Today today</p>
             <p>mob:939435</p>
+            <p>joe.jp.williams@gmail.com</p>
+            <a href="mailto:joe.jp.williams@gmail.com">joe.jp.williams@gmail.com</a>
             <title>at or and and at or</title>
             <a href="hello.com">hello</a>
             <a href="hello.com">click here</a>
