--- a/seo.html
+++ b/seo.html
@@ -72,6 +72,7 @@
             <abbr>W3C</abbr>
             <p>B.B.C.</p>
             <p>mob: 0983 Today Today today</p>
+            <p>0.5 million & 0.7 million</p>
             <p>mob:939435</p>
             <p>joe.jp.williams@gmail.com</p>
             <a href="mailto:joe.jp.williams@gmail.com">joe.jp.williams@gmail.com</a>
