--- a/seo.html
+++ b/seo.html
@@ -82,6 +82,8 @@
             <a href="hello.com">click</a>
             <a href="hello.com">hello</a>
             <a href="hello.com">hello</a>
+            <title>one two three four five six seven eight nine ten</title>
+            <title>one two three four five six seven eight nine</title>
             <a href="hello.com">hello</a>
             <a href="mailto:someone@example.com">Someone</a>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
