--- a/seo.html
+++ b/seo.html
@@ -62,6 +62,13 @@
         </section>
         <h1>!$*&£$*(&$*£ DFF DFDF DF  F DFD F DFD F DF DD FD FD</h1>
 
+        <form id="myform">
+          <label for="fname">First name:</label><br>
+          <input type="text" id="fname" name="fname"><br>
+          <label for="lname">Last name:</label><br>
+          <input type="text" id="lname" name="lname">
+        </form>
+
         <section id="contact">
             <h2>Lorem ipsum</h2>
             <p>4p 4pence 50p</p>
