--- a/seo.html
+++ b/seo.html
@@ -67,6 +67,7 @@
           <input type="text" id="fname" name="fname"><br>
           <label for="lname">Last name:</label><br>
           <input type="text" id="lname" name="lname">
+        <input type="submit" value="Submit" id="submit">
         </form>
 
         <section id="contact">
