--- a/seo.html
+++ b/seo.html
@@ -62,7 +62,7 @@
         </section>
         <h1>!$*&£$*(&$*£ DFF DFDF DF  F DFD F DFD F DF DD FD FD</h1>
 
-        <form id="myform">
+        <form id="myform" action="https://html-preview.github.io/?url=https://github.com/squeakerdev/seotest/blob/main/seo.html">
           <label for="fname">First name:</label><br>
           <input type="text" id="fname" name="fname"><br>
           <label for="lname">Last name:</label><br>
