--- a/seo.html
+++ b/seo.html
@@ -51,11 +51,11 @@
                 <li>Because they're.</li>
                 <li>Easy to read.</li>
             </ul>
+            <i>1st</i>
             <i>Italics</i>
-            <i>Italics</i>
-            <i>Italics</i>
-            <i>Italics</i>
-            <i>Italics</i>
+            <i>tenth</i>
+            <i>one millionth</i>
+            <i>twelfth</i>
             <u>Underline</u>
             <p>4p 4pence 50p</p>
             <p>And here's a <a href="https://www.aaatraq.com" target="_blank">link within a p</a></p>
