--- a/seo.html
+++ b/seo.html
@@ -57,7 +57,10 @@
             <i>one millionth</i>
             <i>twelfth</i>
             <u>Underline</u>
-            <p>4p 4pence 50p</p>
+            <p>B.S.C</p>
+            <p>BSc</p>
+            <p>B.S.c</p>
+            <p>bsc</p>
             <p>And here's a <a href="https://www.aaatraq.com" target="_blank">link within a p</a></p>
         </section>
         <h1>!$*&£$*(&$*£ DFF DFDF DF  F DFD F DFD F DF DD FD FD</h1>
