--- a/seo.html
+++ b/seo.html
@@ -38,6 +38,7 @@
             <a href="mailto:joe@gmail.com?subject=">joe@gmail.com</a>
             <a href="mailto:joe@gmail.com?subject&cc=joe1@gmail.com">joe@gmail.com</a>
         </p>
+        <p>Ivey's Tangering Leadership Centre</p>
         <section id="about">
             <h2>About this page</h2>
             <p>This is a page that I wrote very quickly to make sure that the SEO scanner is working as expected</p>
